--- a/day9/index.html
+++ b/day9/index.html
@@ -59,5 +59,5 @@
   <h3>The Nullish Coalescing Operator (??)</h3>
   <p>The ?? operator returns the first argument if it is not nullish (null or undefined).</p>
 </body>
-
+//Coding daily challenge
 </html>
